--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
+    "fast-average-color": "^9.4.0",
     "framer-motion": "^12.4.7",
     "lucide-react": "^0.475.0",
+    "motion": "^12.4.7",
     "next": "15.1.7",
     "next-themes": "^0.4.4",
     "react": "19.0.0",
